feat: Cambio de estructura del helper
Anteriormente se usaba un helper para las peticiones en la carpeta "utils", pero ahora se usa directamente desde el paquete "helpers".

- Se modifica el servicio CargaExcel para utilizar la lógica que se había creado en el helper.
- Se elimina el paquete "helper".
udistrital/Cumplidos_y_certificaciones_documentacion#253
