# swagger/swagger.json
@@ -1,17 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "beego Test API",
-        "description": "beego has a very cool tools to autogenerate documents for your API\n",
-        "version": "1.0.0",
-        "termsOfService": "http://beego.me/",
-        "contact": {
-            "email": "astaxie@gmail.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        }
+        "contact": {}
     },
     "basePath": "/v1",
     "paths": {
@@ -20,6 +10,66 @@
                 "tags": [
                     "carga-data-excel"
                 ]
+            }
+        },
+        "/consultar-asignaciones/{numeroDocumento}": {
+            "get": {
+                "tags": [
+                    "consultar-asignaciones"
+                ],
+                "operationId": "ConsultarAsignacionesController.ConsultarAsignaciones por documento supervisor",
+                "parameters": [
+                    {
+                        "in": "de",
+                        "name": "Nmero",
+                        "description": "path",
+                        "schema": {
+                            "$ref": "#/definitions/numeroDocumento"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.CambioEstadoCumplidoResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "{object} map[string]interface{}"
+                    }
+                }
+            }
+        },
+        "/resultado/resultado-evaluacion": {
+            "post": {
+                "tags": [
+                    "resultado"
+                ],
+                "description": "Guarda el resultado de una evaluación de cumplimiento de proveedor\n\u003cbr\u003e",
+                "operationId": "ResultadoEvaluacionController.GuardarResultadoEvaluacion",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Estructura con el resultado de la evaluación",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/BodyResultadoEvaluacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.CambioEstadoCumplidoResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "{object} map[string]interface{}"
+                    }
+                }
             }
         }
     },
@@ -31,6 +81,20 @@
         "models.CambioEstadoCumplidoResponse": {
             "title": "CambioEstadoCumplidoResponse",
             "type": "object"
+        },
+        "numeroDocumento": {
+            "title": "numeroDocumento",
+            "type": "object"
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "carga-data-excel",
+            "description": "Carga-Data-ExcelController operations for Carga-Data-Excel\n"
+        },
+        {
+            "name": "consultar-asignaciones",
+            "description": "Consultar-Asignaciones-Controller operations for Consultar-Asignaciones-Controller\n"
+        }
+    ]
 }
